trying to fix the Canvas jumping in iOS safari

--- a/next.js/src/components/sections/clientsPage/Hero/styles.module.scss
+++ b/next.js/src/components/sections/clientsPage/Hero/styles.module.scss
@@ -12,7 +12,7 @@
   }
   .render {
     min-width: 100%;
-    height: 100%;
+    height: auto;
     aspect-ratio: 1/1;
     display: flex;
     align-items: center;
